Unreleased:

* Bug fix: Uploading file with unicode file name now won't raise an error when
  logging in the AWS is turned on.
* Bug fix: Task "paperclip:refresh:missing_styles" now work correctly.
* Bug fix: Handle the case when :restricted_characters is nil.
* Bug fix: Don't delete all the existing styles if we reprocess.
* Bug fix: Content type is now ensured to not having a new line character.
* API CHANGE: Non-Rails usage should include Paperclip::Glue directly.

  `Paperclip::Railtie` was intended to be used with Ruby on Rails only. If you're
  using Paperclip without Rails, you should include `Paperclip::Glue` into
  `ActiveRecord::Base` instead of requiring `paperclip/railtie`:

      ActiveRecord::Base.send :include, Paperclip::Glue

* Bug fix: AttachmentContentTypeValidator now allow you to specify :allow_blank/:allow_nil
* Bug fix: Make sure content type always a String.
* Bug fix: Fix attachment.reprocess! when using storage providers fog and s3.
* Bug fix: Fix a problem with incorrect content_type detected with 'file' command for an empty file on Mac.

New in 3.0.2:

* API CHANGE: Generated migration class name is now plural (AddAttachmentToUsers instead of AddAttachmentToUser)
* API CHANGE: Remove Rails plugin initialization code.
* API CHANGE: Explicitly require Ruby 1.9.2 in the Gemfile.
* Bug fix: Fixes AWS::S3::Errors::RequestTimeout on Model#save.
* Bug fix: Fix a problem when there's no logger specified.
* Bug fix: Fix a problem when attaching Rack::Test::UploadedFile instance.

New in 3.0.1:

* Feature: Introduce Paperlip IO adapter.
* Bug fix: Regression in AttachmentContentTypeValidator has been fixed.

New in 3.0.0:

* API CHANGE: Paperclip now requires at least Ruby on Rails version 3.0.0
* API CHANGE: The default :url and :path have changed. The new scheme avoids
  filesystem conflicts and scales to handle larger numbers of uploads.

  The easiest way to upgrade is to add an explicit :url and :path to your
  has_attached_file calls:
