@@ -47,7 +47,9 @@ module Paperclip
     private
 
     def copy_to_tempfile(src)
-      dest = Tempfile.new(original_filename)
+      extension = File.extname(original_filename)
+      basename = File.basename(original_filename, extension)
+      dest = Tempfile.new([basename, extension])
       dest.binmode
       while data = src.read(16*1024)
         dest.write(data)
